PyMaker/datas/object2/RawHTML/i14001/Python_DOC_referPages.python-syntax-error-while-statement.txt
<div class="post-text" itemprop="text">
<p>I can't figure out were I'm going wrong and help would be much appreciated</p>
<pre><code>the_number =random.randit(1, 9)
guess = int(input("take a guess: "))
while guess != the_number: 
</code></pre>
<p>Why does it say there is a syntax error on the last line. (This is not the complete code)</p>
<p>Here's the whole code if it helps</p>
<pre><code>import random 
print("guess a number between 1 and 9")
guess =input() 
guess =int(guess) 
the_number = (random.randint(1, 9)

while guess != the_number:  
 if guess  != the_number: 
  print("incorrect number guess again")
  continue 
 else: 
   print("congratulations you have guessed the number was, " , the_number)
   break 
</code></pre>
</div>
<div class="post-text" itemprop="text">
<p>Are you sure there is a colon in the code that gave you an error? The only way I can make a syntax error on that line is to remove the colon, or to replace the colon with a semicolon, like this:</p>
<pre><code>&gt;&gt;&gt; while guess != the_number
</code></pre>
<p>or this:</p>
<pre><code>&gt;&gt;&gt; while guess != the_number;
</code></pre>
<p>which <em>do</em> give the error:</p>
<pre><code>File "&lt;stdin&gt;", line 1
  while guess != the_number
                          ^
SyntaxError: invalid syntax
</code></pre>
<p>This exact error happens to be the example error for the definition of 'Syntax Error' in the Python documentation
(<a href="https://docs.python.org/3/tutorial/errors.html#syntax-errors" rel="nofollow">Python 3</a> or <a href="https://docs.python.org/2/tutorial/errors.html#syntax-errors" rel="nofollow">Python 2</a> docs).</p>
<p>P.S. welcome to Stackoverflow! Next time you should post the error message you get too. And if you <em>are</em> a beginner, which is just fine, googling for your error message usually works great.</p>
</div>
<span class="comment-copy">what's the next line? Right now, your syntax error is "uh, there's nothing after a while statement"</span>
<span class="comment-copy">The error is probably due to the random <code>(</code> you have on the 5th line before <code>random.randint(1,9)</code></span>
<span class="comment-copy">while guess != the_number:         ^ SyntaxError: invalid syntax 1|u0_a244@D2303:/ $</span>
<span class="comment-copy">The caret is directly below while in the error message which is what confused me to start with</span>
<span class="comment-copy">Oh, haha @OliverBond you don't have a closing parenthesis on the line above the while -- <code>the_number = (random.randint(1, 9)</code>   that's why it's good to post your code...</span>
<span class="comment-copy">For god sake, thanks slushy</span>
<span class="comment-copy">@slushy your comment would make a fine answer</span>
